[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/temita.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/Kurland_Font_0_22/Kurland.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/shortest_path/niveles/win_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="winMenu" type="Node2D"]
z_index = 2
script = ExtResource( 3 )

[node name="WonMenu" type="MarginContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -71.0
margin_right = 810.0
margin_bottom = 1199.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="WonMenu"]
modulate = Color( 0.592157, 0.403922, 0.643137, 0.486275 )
margin_right = 911.0
margin_bottom = 1270.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="WonMenu"]
margin_left = 329.0
margin_top = 539.0
margin_right = 582.0
margin_bottom = 731.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="WonMenu/PanelContainer"]
margin_right = 253.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="WonMenu/PanelContainer/VBoxContainer"]
margin_right = 253.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
text = "Has ganado!"
align = 1

[node name="NextLevel" type="Button" parent="WonMenu/PanelContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 253.0
margin_bottom = 98.0
text = "Siguiente nivel"

[node name="Resume" type="Button" parent="WonMenu/PanelContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 253.0
margin_bottom = 145.0
text = "Volver al nivel"

[node name="MainMenu" type="Button" parent="WonMenu/PanelContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 253.0
margin_bottom = 192.0
text = "Menu principal"
